...
                navigation.goBack();
                // @ts-ignore
                navigation.navigate(RouteNames.BarcodeScanner);
              }}
            />
            <Button
              label="Save"
              onPress={() => {
                addPantryItemMutation.mutate(formData, {
                  onSuccess: () => {
                    navigation.goBack();
                    onDisplayNotification();
                  },
...
