...
      </ScrollView>
    );
  };

  return (
    <>
      <DashboardLayout title="Pantry" mobileHeader={{ backButton: false }}>
        <TabView
          lazy
          navigationState={{ index, routes: tabRoutes }}
          renderScene={renderScene}
          renderTabBar={renderTabBar}
          onIndexChange={setIndex}
...
