...
          backButton={mobileHeader.backButton}
          renderIcons={mobileHeader.renderIcons}
        />
        {scrollable ? (
          <KeyboardAwareScrollView
            contentContainerStyle={{ flexGrow: 1 }}
            testID="mainScrollView"
          >
            {enableBounceBackground && (
              <View
                backgroundColor="primary.900"
                style={{
                  height: 1000,
...
