...
            </Text>
          </Hidden>
          <VStack>
            <VStack space="3">
              <VStack space="4">
                <FloatingLabelInput
                  testID="usernameInput"
                  py="3"
                  isRequired
                  label="Email"
                  labelColor="#9CA3AF"
                  labelBGColor={useColorModeValue('#fff', '#1F2937')}
                  borderRadius="4"
...
